# R-type

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Converter_mp3_to_ogg.sh  DIAGNOSTIC_MULTIPLAYER.md  Dockerfile  ENEMY_SHOWCASE_README.md  ENGINE_AUDIT_RTYPE_SPECIFIC.md  FLAPPY_README.md  MIGRATION_TO_STRING_BASED.md  MULTIPLAYER_GUIDE.md  PRR.md  Protocol.md  README.md  README_WINDOWS.md  REFACTORING_SUMMARY.md  build_fail.txt  build_linux.sh  build_windows.bat  cross_compile_windows.sh  docker-compose.yml  imgui.ini  package_windows.sh  run_multiplayer.sh  test_lua.sh  test_multiplayer_simple.sh  user_settings.lua  vcpkg.json
client/: CMakeLists.txt  main(debut ecs).cpp  main.cpp
client/src/rendering/: SFMLRenderer.cpp  SFMLSprite.cpp  SFMLTexture.cpp
editor/: CMakeLists.txt
editor/include/: Canvas.hpp  Editor.hpp  FolderBrowser.hpp  LuaParser.hpp  Serializer.hpp  SpawnTable.hpp  StageData.hpp  WavePanel.hpp
editor/src/: Canvas.cpp  Editor.cpp  FolderBrowser.cpp  LuaParser.cpp  Serializer.cpp  SpawnTable.cpp  WavePanel.cpp  main.cpp
engine/: CMakeLists.txt
engine/benchmark/: BENCHMARK_RESULTS.md
engine/include/: Packet.hpp  Types.hpp
engine/include/components/: Animation.hpp  Attachment.hpp  AudioSource.hpp  Boundary.hpp  Collectable.hpp  Collider.hpp  Damage.hpp  Health.hpp  Lifetime.hpp  MovementPattern.hpp  NetworkId.hpp  Position.hpp  Score.hpp  ScrollingBackground.hpp  Sprite.hpp  Tag.hpp  UIButton.hpp  UICheckbox.hpp  UIDropdown.hpp  UIElement.hpp  UIInputField.hpp  UIPanel.hpp  UISlider.hpp  UIText.hpp  Velocity.hpp  Weapon.hpp
engine/include/core/: Config.hpp  DevConsole.hpp  Event.hpp  EventBus.hpp  Export.hpp  GameStateCallbacks.hpp  InputManager.hpp  Logger.hpp  Profiler.hpp  ProfilerOverlay.hpp  ResourceManager.hpp  SystemLoader.hpp  Time.hpp
engine/include/ecs/: ComponentArray.hpp  ComponentManager.hpp  Components.hpp  Coordinator.hpp  ECS.hpp  EntityManager.hpp  RegisterCoreComponents.hpp  RenderSystem.hpp  System.hpp  SystemManager.hpp  Systems.hpp  Types.hpp
engine/include/engine/: Audio.hpp  Clock.hpp  Input.hpp  Keyboard.hpp
engine/include/network/: ClientSession.hpp  Compression.hpp  NetworkClient.hpp  NetworkServer.hpp  Packet.hpp  Prediction.hpp  Protocol.hpp  README.md  RTypeProtocol.hpp  Room.hpp  RoomManager.hpp  Serializer.hpp  UdpClient.hpp  UdpServer.hpp
engine/include/rendering/: Camera.hpp  IFont.hpp  IRenderer.hpp  ISprite.hpp  IText.hpp  ITexture.hpp  Types.hpp
engine/include/scripting/: ComponentBindings.hpp  CoreBindings.hpp  DevConsoleBindings.hpp  GameBindings.hpp  LuaState.hpp  PrefabManager.hpp  ScriptSystem.hpp  ScriptingManager.hpp  UIBindings.hpp
engine/include/systems/: AnimationSystem.hpp  AudioSystem.hpp  BoundarySystem.hpp  CollisionSystem.hpp  HealthSystem.hpp  InputSystem.hpp  LifetimeSystem.hpp  MovementPatternSystem.hpp  MovementSystem.hpp  NetworkSystem.hpp  RenderSystem.hpp  ScrollingBackgroundSystem.hpp  StateMachineAnimationSystem.hpp  UISystem.hpp
engine/modules/shootemup/: CMakeLists.txt  CONFIG_DRIVEN_DESIGN.md  README.md
engine/scripts/: download_sol3.sh
engine/src/: main.cpp
engine/src/core/: Config.cpp  DevConsole.cpp  EventBus.cpp  InputManager.cpp  Logger.cpp  Profiler.cpp  ProfilerOverlay.cpp  ResourceManager.cpp  SystemLoader.cpp  Time.cpp
engine/src/ecs/: ComponentManager.cpp  Coordinator.cpp  EntityManager.cpp  RenderSystem.cpp  SystemManager.cpp
engine/src/engine/: Audio.cpp  Clock.cpp  Input.cpp  Keyboard.cpp
engine/src/network/: ClientSession.hpp  NetworkClient.cpp  NetworkServer.cpp  Protocol.hpp  UdpClient.cpp  UdpServer.cpp  UdpServer.hpp
engine/src/rendering/: Camera.cpp  Window.cpp
engine/src/scripting/: ComponentBindings.cpp  CoreBindings.cpp  DevConsoleBindings.cpp  GameBindings.cpp  LuaState.cpp  PrefabManager.cpp  ScriptSystem.cpp  ScriptingManager.cpp  UIBindings.cpp
engine/src/systems/: AnimationSystem.cpp  AudioSystem.cpp  BoundarySystem.cpp  CollisionSystem.cpp  EnemySpawnSystem.cpp  HealthSystem.cpp  InputSystem.cpp  LifetimeSystem.cpp  MovementPatternSystem.cpp  MovementSystem.cpp  RenderSystem.cpp  ScrollingBackgroundSystem.cpp  StateMachineAnimationSystem.cpp  UISystem.cpp  UISystemEntities.cpp  UISystemRender.cpp  WeaponSystem.cpp
engine/systems/: CMakeLists.txt
engine/systems/collision/: CMakeLists.txt
engine/systems/input/: CMakeLists.txt
engine/systems/lifetime/: CMakeLists.txt
engine/systems/movement/: CMakeLists.txt
game/: CMakeLists.txt  FACTORY_EXAMPLES.cpp  FACTORY_USAGE_GUIDE.md  README_FACTORIES.md  main avant tout changement.cpp  main.cpp  main.cpp.backup
game/assets/config/: user_settings.json  user_settings2.json
game/assets/scripts/: init.lua  test_entity.lua  ui_init.lua  ui_init_new.lua  ui_init_old.lua
game/assets/sounds/: order.txt
game/include/: FactoryBindings.hpp  Game.hpp  GameRefactored.hpp  GameStateManager.hpp
game/include/components/: Homing.hpp  LaserBeam.hpp  WaveMotion.hpp
game/include/core/: AssetLoader.hpp  AudioManager.hpp  Game.hpp  GameConfig.hpp  GameInitializer.hpp  GameLoop.hpp  GameplayManager.hpp  InputHandler.hpp  NetworkManager.hpp  SystemsManager.hpp
game/include/entities/: EntityFactory.hpp
game/include/factories/: EnemyFactory.hpp  ProjectileFactory.hpp
game/include/managers/: AudioManager.hpp  MusicManager.hpp  NetworkManager.hpp  SFXManager.hpp  StateManager.hpp
game/include/network/: GamePackets.hpp  LobbyData.hpp  NetworkBindings.hpp  (+2 more)
game/src/: FactoryBindings.cpp  Game.cpp  GameRefactored.cpp  GameRefactored_New.cpp  GameStateManager.cpp  Game_tmp  Gamecpp  NetworkManager.cpp
game2/: .gitignore  CMakeLists.txt  README.md
game2/include/: FlappyGame.hpp  NetworkBindings.hpp
game2/server/: CMakeLists.txt  SimpleFlappyServer.cpp  SimpleProtocol.hpp
game2/src/: FlappyGame.cpp  NetworkBindings.cpp  main.cpp
game_engine/ecs/: .gitignore  CMakeLists.txt
server/: CMakeLists.txt
server/include/: ServerConfig.hpp
server/src/: ServerConfig.cpp  main.cpp  main_improved.cpp
tests/: CMakeLists.txt  NetworkTests.cpp
(+229 files in other folders)
